--- a/Dockerfile-tf141-nv384.81.gpu
+++ b/Dockerfile-tf141-nv384.81.gpu
@@ -1,4 +1,4 @@
-FROM nvidia/cuda:9.0-cudnn7-runtime-ubuntu16.04
+FROM nvidia/cuda:8.0-cudnn6-runtime-ubuntu16.04
 
 LABEL maintainer="Valentin Kozlov <valentin.kozlov@kit.edu>"
 # Dockerfile based on the one for Tensorflow from Tensorflow:
@@ -22,6 +22,35 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
+
+#ENV CUDA_VERSION="9.0.176"
+ENV CUDA_PKG_VERSION="8-0=8.0.61-1"
+ENV NVVERSION="384"
+ENV NVDRIVER="$NVVERSION.81-0ubuntu1"
+COPY 7fa2af80.pub /tmp/7fa2af80.pub
+RUN apt-key add /tmp/7fa2af80.pub && apt-get update && \
+    mkdir /usr/lib/nvidia && \
+    DEBIAN_FRONTEND=noninteractive apt install -yq --allow-downgrades --no-install-recommends \
+        libcuda1-$NVVERSION=$NVDRIVER \
+        #libcudnn6=6.0.21-1+cuda8.0 \
+        nvidia-$NVVERSION=$NVDRIVER \
+        cuda-nvrtc-$CUDA_PKG_VERSION \
+        cuda-nvgraph-$CUDA_PKG_VERSION \
+        cuda-cusolver-$CUDA_PKG_VERSION \
+        #cuda-cublas-9-0_9.0.176.2-1 \
+        cuda-cublas-$CUDA_PKG_VERSION \
+        cuda-cufft-$CUDA_PKG_VERSION \
+        cuda-curand-$CUDA_PKG_VERSION \
+        cuda-cusparse-$CUDA_PKG_VERSION \
+        cuda-npp-$CUDA_PKG_VERSION \
+        cuda-cudart-$CUDA_PKG_VERSION && \
+#    dpkg -i libcudnn6_6.0.21-1+cuda8.0_amd64.deb && \
+    ln -s cuda-8.0 /usr/local/cuda && \
+    rm -rf /var/lib/apt/lists/* && \
+    rm -rf /var/cudo-repo-9-0-local/* && \
+    rm -rf /tmp/* && \
+    apt-get -y autoremove
+
 RUN curl -O https://bootstrap.pypa.io/get-pip.py && \
     python get-pip.py && \
     rm get-pip.py
@@ -36,7 +65,7 @@ RUN pip --no-cache-dir install \
         pandas \
         scipy \
         sklearn \
-		future \
+	future \
         && \
     python -m ipykernel.kernelspec
 
@@ -48,7 +77,7 @@ RUN pip --no-cache-dir install \
 
 # Install TensorFlow GPU version.
 RUN pip --no-cache-dir install \
-    http://storage.googleapis.com/tensorflow/linux/gpu/tensorflow_gpu-1.5.0-cp27-none-linux_x86_64.whl
+    http://storage.googleapis.com/tensorflow/linux/gpu/tensorflow_gpu-1.4.1-cp27-none-linux_x86_64.whl
 # --- ~ DO NOT EDIT OR DELETE BETWEEN THE LINES --- #
 
 # RUN ln -s /usr/bin/python3 /usr/bin/python#
@@ -64,3 +93,4 @@ ENV LD_LIBRARY_PATH /usr/local/cuda/extras/CUPTI/lib64:$LD_LIBRARY_PATH
 
 # Run app.py when the container launches
 CMD ["python", "benchmark_alexnet.py"]
+
