--- a/docker/Dockerfile.cpu
+++ b/docker/Dockerfile.cpu
@@ -1,4 +1,4 @@
-FROM tensorflow/tensorflow:1.8.0-gpu
+FROM tensorflow/tensorflow:1.8.0
 
 LABEL maintainer='Valentin Kozlov'
 # Dockerfile for tf-benchamrks, GPU version
@@ -29,20 +29,20 @@ RUN git clone https://github.com/vykozlov/tf-benchmarks /benchmarks
 
 # For MNIST data to be downloaded:
 ENV WEBLECUN http://yann.lecun.com/exdb/mnist
-ENV MNIST /benchmarks/datasets/mnist/input_data
+ENV MNISTDOCKER /benchmarks/datasets/mnist/input_data
 
 ### download train and test sets 
-RUN curl -o ${DOCKERMNIST}/train-images-idx3-ubyte.gz \
+RUN curl -o ${MNISTDOCKER}/train-images-idx3-ubyte.gz \
     ${WEBLECUN}/train-images-idx3-ubyte.gz && \
     ### training labels
-    curl -o ${DOCKERMNIST}/train-labels-idx1-ubyte.gz \
+    curl -o ${MNISTDOCKER}/train-labels-idx1-ubyte.gz \
     ${WEBLECUN}/train-labels-idx1-ubyte.gz && \
     ### test images
-    curl -o ${DOCKERMNIST}/t10k-images-idx3-ubyte.gz \
+    curl -o ${MNISTDOCKER}/t10k-images-idx3-ubyte.gz \
     ${WEBLECUN}/t10k-images-idx3-ubyte.gz && \
     ### test labels
-    curl -o ${DOCKERMNIST}/t10k-labels-idx1-ubyte.gz \
+    curl -o ${MNISTDOCKER}/t10k-labels-idx1-ubyte.gz \
     ${WEBLECUN}/t10k-labels-idx1-ubyte.gz
 
 # Run app.py when the container launches
-CMD ["python", "benchmark_alexnet.py"]
+CMD ["python", "benchmark_alexnet.py --data_format=NHWC"]
